--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,357 @@
 extends layout
 
 block content
-  h1= title
-  p Dies ist das #{title} angebot!
-  img(src= image)
+		link(href='/css/style-index.css' rel='stylesheet')
+		// Full Page Intro
+		.view.full-page-intro(style="background-image: url('/img/canyon.jpg'); background-repeat: no-repeat; background-size: cover;")
+			// Mask & flexbox options
+			.mask.rgba-black-light.d-flex.justify-content-center.align-items-center
+				// Content
+				.container
+					// Grid row
+					.row.wow.fadeIn
+						// Grid column
+						.col-md-6.mb-4.white-text.text-center.text-md-left
+							h1.display-4.font-weight-bold Willkommen bei My Weekend Rocks
+							hr.hr-light
+							p
+								strong Hier ist der name Programm!
+							p.mb-4.d-none.d-md-block
+								strong
+									| Erlebe bei uns alle Möglichen Abenteuer, von schnellen Wochenendtrips bis zu
+									| Wochenlagen Erlebnisstouren haben wir fast alles im angebot!
+							a.btn.btn-indigo.btn-lg(href="/events")
+								| Zu den Abenteuern
+								i.fas.fa-passport.ml-2
+						// Grid column
+						// Grid column
+						.col-md-6.col-xl-5.mb-4
+							//- // Card
+							//- .card
+							//- 	// Card content
+							//- 	.card-body
+							//- 		// Form
+							//- 		form(name="")
+							//- 			// Heading
+							//- 			h3.dark-grey-text.text-center
+							//- 				strong Write to us:
+							//- 			hr
+							//- 			.md-form
+							//- 				i.fas.fa-user.prefix.grey-text
+							//- 				input#form3.form-control(type="text")
+							//- 				label(for="form3") Your name
+							//- 			.md-form
+							//- 				i.fas.fa-envelope.prefix.grey-text
+							//- 				input#form2.form-control(type="text")
+							//- 				label(for="form2") Your email
+							//- 			.md-form
+							//- 				i.fas.fa-pencil-alt.prefix.grey-text
+							//- 				textarea#form8.md-textarea(type="text")
+							//- 				label(for="form8") Your message
+							//- 			.text-center
+							//- 				button.btn.btn-indigo Send
+							//- 				hr
+							//- 				fieldset.form-check
+							//- 					input#checkbox1.form-check-input(type="checkbox")
+							//- 					label.form-check-label.dark-grey-text(for="checkbox1") Subscribe me to the newsletter
+							//- 		// Form
+							//- // /.Card
+						// Grid column
+					// Grid row
+				// Content
+			// Mask & flexbox options
+		// Full Page Intro
+		// Main layout
+		main
+			.container
+				// Section: Main info
+				section.mt-5.wow.fadeIn
+					// Grid row
+					.row
+						// Grid column
+						.col-md-6.mb-4
+							img.img-fluid.z-depth-1-half(src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" alt="")
+						// Grid column
+						// Grid column
+						.col-md-6.mb-4
+							// Main heading
+							h3.h3.mb-3 Material Design for Bootstrap
+							p
+								| This template is created with Material Design for Bootstrap (
+								strong MDB
+								|  ) framework.
+							p Read details below to learn more about MDB.
+							// Main heading
+							hr
+							p
+								strong 400+
+								|  material UI elements,
+								strong 600+
+								|  material icons,
+								strong 74
+								|  CSS animations, SASS files, templates, tutorials and many more.
+								strong Free for personal and commercial use.
+							// CTA
+							a.btn.btn-indigo.btn-md(target="_blank" href="https://mdbootstrap.com/docs/jquery/getting-started/download/")
+								| Download
+								i.fas.fa-download.ml-1
+							a.btn.btn-indigo.btn-md(target="_blank" href="https://mdbootstrap.com/docs/jquery/components/")
+								| Live demo
+								i.far.fa-image.ml-1
+						// Grid column
+					// Grid row
+				// Section: Main info
+				//- hr.my-5
+				//- // Section: Main features & Quick Start
+				//- section
+				//- 	h3.h3.text-center.mb-5 About MDB
+				//- 	// Grid row
+				//- 	.row.wow.fadeIn
+				//- 		// Grid column
+				//- 		.col-lg-6.col-md-12.px-4
+				//- 			// First row
+				//- 			.row
+				//- 				.col-1.mr-3
+				//- 					i.fas.fa-code.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h5.feature-title Bootstrap 4
+				//- 					p.grey-text Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.
+				//- 			// /First row
+				//- 			div(style="height:30px")
+				//- 			// Second row
+				//- 			.row
+				//- 				.col-1.mr-3
+				//- 					i.fas.fa-book.fa-2x.blue-text
+				//- 				.col-10
+				//- 					h5.feature-title Detailed documentation
+				//- 					p.grey-text
+				//- 						| We give you detailed user-friendly documentation at your disposal. It will help you to implement your ideas
+				//- 						| easily.
+				//- 			// /Second row
+				//- 			div(style="height:30px")
+				//- 			// Third row
+				//- 			.row
+				//- 				.col-1.mr-3
+				//- 					i.fas.fa-graduation-cap.fa-2x.cyan-text
+				//- 				.col-10
+				//- 					h5.feature-title Lots of tutorials
+				//- 					p.grey-text
+				//- 						| We care about the development of our users. We have prepared numerous tutorials, which allow you to learn
+				//- 						| how to use MDB as well as other technologies.
+				//- 			// /Third row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-lg-6.col-md-12
+				//- 			p.h5.text-center.mb-4 Watch our "5 min Quick Start" tutorial
+				//- 			.embed-responsive.embed-responsive-16by9
+				//- 				iframe.embed-responsive-item(src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen="")
+				//- 		// /Grid column
+				//- 	// /Grid row
+				//- // Section: Main features & Quick Start
+				//- hr.my-5
+				//- // Section: Not enough
+				//- section
+				//- 	h2.my-5.h3.text-center Not enough?
+				//- 	// First row
+				//- 	.row.features-small.mb-5.mt-3.wow.fadeIn
+				//- 		// First column
+				//- 		.col-md-4
+				//- 			// First row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title Free for personal and commercial use
+				//- 					p.grey-text
+				//- 						| Our license is user-friendly. Feel free to use MDB for both private as well as commercial projects.
+				//- 					div(style="height:15px")
+				//- 			// /First row
+				//- 			// Second row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title 400+ UI elements
+				//- 					p.grey-text
+				//- 						| An impressive collection of flexible components allows you to develop any project.
+				//- 					div(style="height:15px")
+				//- 			// /Second row
+				//- 			// Third row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title 600+ icons
+				//- 					p.grey-text Hundreds of useful, scalable, vector icons at your disposal.
+				//- 					div(style="height:15px")
+				//- 			// /Third row
+				//- 			// Fourth row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title Fully responsive
+				//- 					p.grey-text
+				//- 						| It doesn't matter whether your project will be displayed on desktop, laptop, tablet or mobile phone. MDB
+				//- 						| looks great on each screen.
+				//- 					div(style="height:15px")
+				//- 			// /Fourth row
+				//- 		// /First column
+				//- 		// Second column
+				//- 		.col-md-4.flex-center
+				//- 			img.z-depth-0.img-fluid(src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone")
+				//- 		// /Second column
+				//- 		// Third column
+				//- 		.col-md-4.mt-2
+				//- 			// First row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title 70+ CSS animations
+				//- 					p.grey-text
+				//- 						| Neat and easy to use animations, which will increase the interactivity of your project and delight your visitors.
+				//- 					div(style="height:15px")
+				//- 			// /First row
+				//- 			// Second row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title Plenty of useful templates
+				//- 					p.grey-text Need inspiration? Use one of our predefined templates for free.
+				//- 					div(style="height:15px")
+				//- 			// /Second row
+				//- 			// Third row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title Easy installation
+				//- 					p.grey-text
+				//- 						| 5 minutes, a few clicks and... done. You will be surprised at how easy it is.
+				//- 					div(style="height:15px")
+				//- 			// /Third row
+				//- 			// Fourth row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-check-circle.fa-2x.indigo-text
+				//- 				.col-10
+				//- 					h6.feature-title Easy to use and customize
+				//- 					p.grey-text
+				//- 						| Using MDB is straightforward and pleasant. Components flexibility allows you deep customization. You will
+				//- 						| easily adjust each component to suit your needs.
+				//- 					div(style="height:15px")
+				//- 			// /Fourth row
+				//- 		// /Third column
+				//- 	// /First row
+				//- // Section: Not enough
+				//- hr.mb-5
+				//- // Section: More
+				//- section
+				//- 	h2.my-5.h3.text-center ...and even more
+				//- 	// First row
+				//- 	.row.features-small.mt-5.wow.fadeIn
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fab.fa-firefox.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2.pl-3
+				//- 					h5.feature-title.font-bold.mb-1 Cross-browser compatibility
+				//- 					p.grey-text.mt-2
+				//- 						| Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-level-up-alt.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 Frequent updates
+				//- 					p.grey-text.mt-2
+				//- 						| MDB becomes better every month. We love the project and enhance as much as possible.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-comments.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 Active community
+				//- 					p.grey-text.mt-2
+				//- 						| Our society grows day by day. Visit our forum and check how it is to be a part of our family.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-code.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 jQuery 3.x
+				//- 					p.grey-text.mt-2
+				//- 						| MDB is integrated with newest jQuery. Therefore you can use all the latest features which come along with
+				//- 						| it.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 	// /First row
+				//- 	// Second row
+				//- 	.row.features-small.mt-4.wow.fadeIn
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-cubes.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 Modularity
+				//- 					p.grey-text.mt-2
+				//- 						| Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
+				//- 						| well as modules for CSS (SASS files) and JS.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-question.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 Technical support
+				//- 					p.grey-text.mt-2
+				//- 						| We care about reliability. If you have any questions - do not hesitate to contact us.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.fas.fa-th.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 Flexbox
+				//- 					p.grey-text.mt-2 MDB fully supports Flex Box. You can forget about alignment issues.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 		// Grid column
+				//- 		.col-xl-3.col-lg-6
+				//- 			// Grid row
+				//- 			.row
+				//- 				.col-2
+				//- 					i.far.fa-file-code.fa-2x.mb-1.indigo-text(aria-hidden="true")
+				//- 				.col-10.mb-2
+				//- 					h5.feature-title.font-bold.mb-1 SASS files
+				//- 					p.grey-text.mt-2 Arranged and well documented .scss files can't wait until you compile them.
+				//- 			// /Grid row
+				//- 		// /Grid column
+				//- 	// /Second row
+				//- // Section: More
+		// Main layout
+
